--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,19 @@
-<img src="../resource/pin.png" class="pin hA">
-<img src="../resource/pin.png" class="pin hB">
-<img src="../resource/pin.png" class="pin hC">
+<img src="../resource/pin.png" class="pin hA"/>
+<img src="../resource/pin.png" class="pin hB"/>
+<img src="../resource/pin.png" class="pin hC"/>
 
 <div class="content">
     <div class="split50Frame">
         <img src="../resource/slate.png" class="homeScrap"/>
         <h1 class="homeTitle textFloat textSkew">When Should I Visit?</h1>
-        <h3 class="homeBy textFloat textSkew">A Project by:  Dylan Tran and<br> Andrew Caldwell</h3>
-        <p class="homeText  textFloat textSkew">Use the Polaroid Pictures to explore destinations across the United States.<br> Give it a Click!!!</p>
+        <h6 class="homeBy textFloat textSkew">A Project by:  Dylan Tran and<br> Andrew Caldwell</h6>
+        <p class="homeText textFloat textSkew">Use the Polaroid Pictures to explore destinations across the United States.<br> Give it a Click!!!</p>
     </div>
     
     <div class="split50Frame">
-        <div class="polaroid">
+        <div class="polaroid homeP">
             <div class="mapFrame" svg-world></div>
-            <h2 class="display"> {{ display }} </h2>
+            <h4 class="display"> {{ display }} </h4>
         </div>
     </div>
 </div>
